# redlist

./: .gitignore  AGENTS.md  LICENSE  README.md  config.py  cursorindexignore  example.env  gpkg_species_hulls.py  host_taxa.py  preprocess_occurrences.py  pyproject.toml  stats_species_convex_hull.py  stats_species_dayofyear.py  stats_species_hull_row_impact.py  stats_taxa_count_grid.py  stats_taxon_ranks.py  viz_year_histogram.py
sample_data/: aggregate_daily_10km_sample.json  aggregate_daily_1km_sample.json  aggregate_dayofyear_10km_sample.json  aggregate_yearly_10km_sample.json  occurrences_sample.json  readme.txt
scripts/: _template.py  dataset_io.py  gpkg_species_count_1km.py  host_taxa_species_counts.py  normalize_host_taxa.py  rare_species_hosts.py  stats_host_family_rarity.py  stats_species_convex_hull.py  stats_species_dayofyear.py  stats_species_hull_row_impact.py  stats_species_name_counts.py  stats_species_yearly_rows.py  stats_taxa_count_grid.py  stats_taxon_ranks.py  viz_species_convex_hull_yearly.py  viz_species_yearly_trend.py  viz_year_histogram.py
scripts/host_guest/: reports_md.py
