[project]
name = "redlist"
version = "0.1.0"
description = "FinBIF occurrence statistics and visualizations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.0",
    "matplotlib>=3.8",
    "polars>=1.0",
    "pyproj>=3.6",
    "shapely>=2.0",
    "xlsxwriter>=3.2.9",
]
